R90: take over spec; JDK Compiler Tree API + explicit Java goto-definition
Move R90 (LSP Java-source surfacing) from Backlog to Spec and rewrite the
plan body:

- Replace the planned JavaParser dependency with the JDK Compiler Tree API
  (com.sun.source.util, parse-only). Removes the external-dependency
  objection that kept the item in Backlog.
- Make goto-definition for consumer Java refs (@service, @externalField,
  @enum, @condition, @sourceRow, @tableMethod) an explicit net-new
  deliverable: add SourceLocation to ExternalReference/Method, add a
  Definitions.compute dispatch arm. The Backlog body had framed this only
  as per-line refinement, which assumed a file-level definition that does
  not exist for these directives.
- Preserve all original requirements (Javadoc surfacing, @externalField
  completion, argMapping completion + diagnostics) under a "What changed
  from the original Backlog body" note.
- Fold in principles-architect self-check findings: CatalogBuilder as the
  single join site with (className, methodName, paramCount) key and
  ambiguity -> UNKNOWN; jOOQ field-index keyed by Java field name with
  layout-synthesis fallback; per-file caching in the hot catalog path;
  doc-comment retention and jdk.compiler module-access hazards; snapshot
  projection check before raw-schema walk; end-to-end-first test matrix.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01TD7Eyf2eV3v4gDm2de1zN5